--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li> Dignity</li>
             <li> Rights</li>
         </ol>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/2013_-_Space_out_space.jpg" alt="Floating in space" width = "100">
+        <img src="AFIN-Sentiment-Analysis/photos/IMG_4372.jpg" alt="Floating in space" width = "100">
         
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Tracy_Caldwell_Dyson_in_Cupola_ISS.jpg" width="100">
         
