--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ol>
         <img src="photos/IMG_4372.jpg" alt="Floating in space" width = "200">
         
-        <img src="\photos/IMG_4372.jpg" width="200">
+        <img src="photos/IMG_4372.jpg" width="200">
         
         <img src="photos/IMG_4381.jpg" width="200">
   
