--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   
   <h1>The Canadian Tribute to Human Rights: Monument</h1>
         
-        <p>This page will walk you through some important aspects of this monument</p>
+        <p>This page will walk you through some important aspects of this monument and the impressions of the creator
+  of the webpage</p>
         <ol class="list">
             <li> Equality</li>
             <li> Dignity</li>
