--- a/index.html
+++ b/index.html
@@ -51,15 +51,17 @@
         Held high on the monument in English and French are the words "Equility Dignity Rights" from the United Nations Universal
         Declaration of Human Rights. These three concepts are inscribed on 73 granite plaques in Aboriginal languages spoken in
         Canada, using symbolics or Roman orthography. Grouped in languages families  the plaques are located on the interior walls
-        known  as the "House of Canada." An Algonquin statement accompanying the language plaques acknolwedges that this symbolic
-        monument stands on the tradi
+        known  as the "House of Canada."
         </p>
         
-        <ul id="list2" >
-            <li>This webpage is not a representation of the views of the NFL or its partners.
-            <li>There where no real fish hurt in the making of this webpage.
-            <li>Please try to always improve your websites from what you see as the best is always yet to come.
+        <ul id="AFINN" >
+            <li> Below you can write what this monument means to you.
+              <li> You will find that this sentiment analyzer will give your input a score
+                <li> All it means is that a positive score has positive sentiment and a negative score has negative sentiment
+                  <li> It is not a judgment upon the writer just on the words.
+                    <li> In a future version scores will be saved and compared with word choices.
         </ul>
+  
   <h1>AFINN Sentiment Demo</h1>
 
   <p>
