--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   
   <h2> Photographs </h2>
-        <id = "Dignity" img src="photos/IMG_4372.jpg" alt="Floating in space" width = "500">
+        <img class="Dignity" src="photos/IMG_4372.jpg" alt="Floating in space" width = "500">
         
         <img src="photos/IMG_4369.jpg" width="500">
         
@@ -33,7 +33,7 @@
 
   
         <h2 id="noteHead">First Thoughts on Photographs</h2>
-        <p id="Dignity">This shows a person holding a sign with the word dignity. In my mind it symbolizes the need for people
+        <p class="Dignity">This shows a person holding a sign with the word dignity. In my mind it symbolizes the need for people
   to have an expectation of dignity in their lives.</p>
         <p id="People">This shows, if you look carefully, 6 statues of people. It is not obvious at first why </p>
           <p id="Languages">Seeing these languages instantly makes one curious about the validity of these languages and
