--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ol>
         
   
-  
+  <div id="Photo">
   <h2> Photographs </h2>
         <img class="Dignity" src="photos/IMG_4372.jpg" alt="Floating in space" width = "500">
         
@@ -30,8 +30,8 @@
         <img src="photos/IMG_4381.jpg" width="500">
   
         <img src="photos/IMG_4375.jpg" width="500">
-
-  
+  </div>
+  <div id="Commentary">
         <h2 id="noteHead">First Thoughts on Photographs</h2>
         <p class="Dignity">This shows a person holding a sign with the word dignity. In my mind it symbolizes the need for people
   to have an expectation of dignity in their lives.</p>
@@ -42,6 +42,7 @@
   Equality, Dignity, and Rights for everyone</p>
           <p id="Rights"> It is hard to see at first but the sign being help up by the statue is Rights. What this means to me
   is that Rights needs to be acknoledged seperateley from equality and dignity as they are different. </p>
+  </div>
 
 
 
